--- a/index.html
+++ b/index.html
@@ -2,40 +2,58 @@
 <html lang="et">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Preline v4 test</title>
-  </head>
-  <body>
 
-    <div class="max-w-3xl flex flex-col mx-auto size-full">
-      <!-- ========== HEADER ========== -->
-      <header class="mb-auto flex justify-center z-50 w-full py-4">
-        <nav class="px-4 sm:px-6 lg:px-8">
-          <a class="flex-none text-xl font-semibold sm:text-3xl text-foreground" href="#" aria-label="simmermann.com">simmermann.com</a>
+    <title>Simmermann – AI ja õiguslahendused</title>
+
+    <meta name="description" content="Simmermann.com – AI, automatiseerimine ja praktilised digilahendused." />
+    <meta name="author" content="Martin Simmermann" />
+    <meta name="robots" content="index, follow" />
+
+    <!-- Open Graph -->
+    <meta property="og:title" content="Simmermann – AI ja õiguslahendused" />
+    <meta property="og:description" content="AI, automatiseerimine ja praktilised digilahendused." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://simmermann.com" />
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  </head>
+
+  <body class="bg-background text-foreground">
+
+    <div class="max-w-3xl flex flex-col mx-auto min-h-screen">
+
+      <!-- HEADER -->
+      <header class="mb-auto flex justify-center w-full py-6">
+        <nav>
+          <a class="text-xl font-semibold sm:text-3xl text-foreground" href="/">
+            simmermann.com
+          </a>
         </nav>
       </header>
-      <!-- ========== END HEADER ========== -->
-    
-      <!-- ========== MAIN CONTENT ========== -->
-      <main id="content">
-        <div class="text-center py-10 px-4 sm:px-6 lg:px-8">
-          <h1 class="block text-7xl font-bold text-foreground sm:text-9xl">Hello!</h1>
-          <p class="mt-3 text-muted-foreground-2">This is a test page.</p>
-        </div>
+
+      <!-- MAIN -->
+      <main class="text-center py-16 px-6">
+        <h1 class="text-5xl sm:text-7xl font-bold">
+          Hello!
+        </h1>
+        <p class="mt-6 text-muted-foreground-2 text-lg">
+          This is a production test page.
+        </p>
       </main>
-      <!-- ========== END MAIN CONTENT ========== -->
-    
-      <!-- ========== FOOTER ========== -->
-      <footer class="mt-auto text-center py-5">
-        <div class="max-w-[85rem] mx-auto px-4 sm:px-6 lg:px-8">
-          <p class="text-sm text-muted-foreground-1">© All Rights Reserved. 2026.</p>
-        </div>
+
+      <!-- FOOTER -->
+      <footer class="mt-auto text-center py-8">
+        <p class="text-sm text-muted-foreground-1">
+          © 2026 Martin Simmermann. Kõik õigused kaitstud.
+        </p>
       </footer>
-      <!-- ========== END FOOTER ========== -->
+
     </div>
 
-    <!-- Siia kopeeri Preline Example komponent -->
-
+    <!-- Vite entry -->
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
